# c-io

./: .clang-format  CMakeLists.txt  amalgamate.py  requirements.txt
example/: example_01.c  example_02.c
examples/: accept.c  async_accept.c
include/: io.h
include/io/: accept.h  acceptor.h  align.h  allocator.h  assert.h  atomic.h  basic_err.h  config.h  context.h  descriptor.h  err.h  gai_err.h  hash.h  hashmap.h  io_accept.h  io_acceptor.h  io_allocator.h  io_assert.h  io_basic_acceptor.h  io_basic_socket.h  io_config.h  io_context.h  io_descriptor.h  io_err.h  io_hash.h  io_hashmap.h  io_list.h  io_loop.h  io_obj_pool.h  io_other_err.h  io_poll.h  io_queue.h  io_reactor.h  io_read.h  io_socket.h  io_system_err.h  io_task.h  io_timer.h  io_unix_acceptor.h  io_unix_socket.h  (+23 more)
scripts/: ensure_license.sh
tests/: context.c  syscall_stubs.c  syscall_stubs.h  tcp_acceptor.c  tcp_socket.c  test.c  test.h  unix_acceptor.c  unix_socket.c
